ajout des lien de reseaux sociaux

--- a/index.html
+++ b/index.html
@@ -247,10 +247,11 @@
 				<h5>Follow me!!</h5>
 				<div class="social-icons">
 					<a href="https://www.facebook.com/profile.php?id=61551087717026" target="_blank"><img
-							src="./images/social-twitter.png" alt="social icon"></a>
-					<a href="#" target="_blank"><img src="./images/social-pinterest.png" alt="social icon"></a>
-					<a href="#" target="_blank"><img src="./images/social-youtube.png" alt="social icon"></a>
-					<a href="#" target="_blank"><img src="./images/social-twitter.png" alt="social icon"></a>
+							src="./images/facebook.svg" alt="social icon"></a>
+					<a href="https://www.youtube.com/@guideinandanderonelbaye3563" target="_blank"><img
+							src="./images/social-youtube.png" alt="social icon"></a>
+					<a href="https://www.instagram.com/guideinan_dande/" target="_blank"><img
+							src="./images/instagram.svg" alt="social icon"></a>
 				</div>
 				<h5>Share it!</h5>
 			</div>
@@ -271,10 +272,12 @@
 						<p class="footer-phone">Phone: +216 53 569 916</p>
 						<p>Email : gdanderonelbaye@gmail.com</p>
 						<div class="social-icons">
-							<a href="#" target="_blank"><img src="./images/social-twitter.png" alt="social icon"></a>
-							<a href="#" target="_blank"><img src="./images/social-pinterest.png" alt="social icon"></a>
-							<a href="#" target="_blank"><img src="./images/social-youtube.png" alt="social icon"></a>
-							<a href="#" target="_blank"><img src="./images/social-twitter.png" alt="social icon"></a>
+							<a href="https://www.facebook.com/profile.php?id=61551087717026" target="_blank"><img
+									src="./images/facebook.svg" alt="social icon"></a>
+							<a href="https://www.youtube.com/@guideinandanderonelbaye3563" target="_blank"><img
+									src="./images/social-youtube.png" alt="social icon"></a>
+							<a href="https://www.instagram.com/guideinan_dande/" target="_blank"><img
+									src="./images/instagram.svg" alt="social icon"></a>
 						</div>
 					</div>
 				</div>
