--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
 <!doctype html>
-<!--
-	Author by FreeHTML5.co
-	Twitter: https://twitter.com/fh5co
-	Facebook: https://fb.com/fh5co
-	URL: https://freehtml5.co
--->
 <html lang="en">
 
 <head>
@@ -92,7 +86,7 @@
 						<h4>Author</h4>
 						<p class="p-white">See me</p>
 					</div>
-					<div class="about-me-single-slide">
+					<!--<div class="about-me-single-slide">
 						<h2 class="universal-h2 universal-h2-bckg">About me 2</h2>
 						<p><span>H</span> e has work appearing or forthcoming in over a dozen venues, including Buzzy
 							Mag, The Spirit of Poe, and the British Fantasy Society journal Dark Horizons. He is also
@@ -102,7 +96,7 @@
 							a community for authors to learn and connect.</p>
 						<h4>Author</h4>
 						<p class="p-white">See me</p>
-					</div>
+					</div>-->
 				</div>
 			</div>
 		</div>
@@ -116,13 +110,13 @@
 			<div class="books">
 				<div class="single-book">
 					<a href="#" class="single-book__img">
-						<img src="./images/books-1.jpg" alt="single book and cd">
+						<img src="./images/devWebAndMobil.PNG" height="200px" width="250px" alt="single book and cd">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
 						</div>
 					</a>
-					<h4 class="single-book__title">Olivani</h4>
-					<span class="single-book__price">$15.00</span>
+					<h4 class="single-book__title"> Development</h4>
+					<span class="single-book__price"> websites and mobile applications</span>
 					<!-- star rating -->
 					<div class="rating">
 						<span>&#9734;</span>
@@ -135,13 +129,13 @@
 				</div>
 				<div class="single-book">
 					<a href="#" class="single-book__img">
-						<img src="./images/books-2.jpg" alt="single book and cd">
+						<img src="./images/cyberSecurity.PNG" height="200px" width="250px" alt="single book and cd">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
 						</div>
 					</a>
-					<h4 class="single-book__title">Molleon’s Life</h4>
-					<span class="single-book__price">$22.00</span>
+					<h4 class="single-book__title"> Security</h4>
+					<span class="single-book__price">Information systems</span>
 					<!-- star rating -->
 					<div class="rating">
 						<span>&#9734;</span>
@@ -154,27 +148,40 @@
 				</div>
 				<div class="single-book">
 					<a href="#" class="single-book__img">
-						<img src="./images/books-3.jpg" alt="single book and cd">
+						<img src="./images/gestionProjet.PNG" height="200px" width="250px" alt="single book and cd">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
 						</div>
 					</a>
-					<h4 class="single-book__title">Love is Love</h4>
-					<span class="single-book__price">$25.00</span>
+					<h4 class="single-book__title">Management</h4>
+					<span class="single-book__price">IT project </span>
+					<!-- star rating -->
+					<div class="rating">
+						<span>&#9734;</span>
+						<span>&#9734;</span>
+						<span>&#9734;</span>
+						<span>&#9734;</span>
+						<span>&#9734;</span>
+					</div>
 				</div>
 				<div class="single-book">
 					<a href="#" class="single-book__img">
-						<img src="./images/books-4.jpg" alt="single book and cd">
+						<img src="./images/relationPublic2.PNG" height="200px" width="250px" alt="single book and cd">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
 						</div>
 					</a>
-					<h4 class="single-book__title">Give Me Also</h4>
-					<span class="single-book__price">$30.00</span>
+					<h4 class="single-book__title"> Public relations</h4>
+					<span class="single-book__price">Communication</span>
+					<!-- star rating -->
+					<div class="rating">
+						<span>&#9734;</span>
+						<span>&#9734;</span>
+						<span>&#9734;</span>
+						<span>&#9734;</span>
+						<span>&#9734;</span>
+					</div>
 				</div>
-			</div>
-			<div class="books-brand-button">
-				<a href="#" class="brand-button">View more</a>
 			</div>
 		</div>
 	</section>
@@ -183,13 +190,12 @@
 	<div class="fh5co-counter counters">
 		<div class="counter-inner site-container">
 			<div class="single-count">
-				<span class="count" data-count="50">0</span>
+				<span class="count" data-count="10">0</span>
 				<div class="single-count__text">
-					<img src="./images/counter-1.png" alt="counter icon">
-					<p>Books</p>
+					<p> number of local business sites</p>
 				</div>
 			</div>
-			<div class="single-count">
+			<!--<div class="single-count">
 				<span class="count" data-count="600">0</span>
 				<div class="single-count__text">
 					<img src="./images/counter-2.png" alt="counter icon">
@@ -209,7 +215,7 @@
 					<img src="./images/counter-4.png" alt="counter icon">
 					<p>Awards</p>
 				</div>
-			</div>
+			</div>-->
 		</div>
 	</div>
 	<!-- Counter -->
